More detailed rendering. Store API token in sessionStorage. Navigation and formatting.

--- a/src/boards-list.component.html
+++ b/src/boards-list.component.html
@@ -1,4 +1,4 @@
-<h3>Boards list</h3>
+<h3>Boards</h3>
 <ul>
   <li *ngFor="let board of boards | async">
     <a [routerLink]="['/boards', board.id]">
