--- a/src/board-detail.component.html
+++ b/src/board-detail.component.html
@@ -1,7 +1,7 @@
 <h3>{{board.name}}</h3>
 
 <div class="row">
-  <div class="col-md-3 trello-list" *ngFor="let list of board.lists; let index=index" [ngClass]="{'break':index%4==0}">
+  <div class="col-md-3 col-print-3 trello-list" *ngFor="let list of board.lists; let index=index" [ngClass]="{'break':index%4==0}">
     <h4>{{ list.name }}</h4>
     <div class="trello-card" *ngFor="let card of list.cards">
       <p class="name">{{ card.name }}</p>
