--- a/src/app.component.html
+++ b/src/app.component.html
@@ -1,4 +1,4 @@
-<ul class="nav nav-pills" style="margin-bottom: 20px;">
+<ul class="nav nav-pills no-print" style="margin-bottom: 20px;">
   <li><a [routerLink]="['/auth']">Login/logout</a></li>
   <li><a [routerLink]="['/boards']">List of boards</a></li>
 </ul>
