--- a/app.css
+++ b/app.css
@@ -1,1 +1,1 @@
-.trello-list.break{clear:left}
+.trello-list{margin-bottom:40px;overflow:hidden}.trello-list.break{clear:left}@media print{.no-print{display:none}}
