--- a/src/vendor.scss
+++ b/src/vendor.scss
@@ -1,7 +1,7 @@
 $icon-font-path: '~bootstrap-sass/assets/fonts/bootstrap/';
 
 @import '~bootstrap-sass/assets/stylesheets/bootstrap/variables';
-$font-family-base: $font-family-serif;
+$font-family-base: $font-family-sans-serif;
 
 @import '~bootstrap-sass/assets/stylesheets/bootstrap';
 
