--- a/src/index.scss
+++ b/src/index.scss
@@ -6,6 +6,15 @@
   }
 }
 
+.markdown {
+  h1 { font-size: 150%; }
+  h2 { font-size: 125%; }
+  h3 { font-size: 110%; }
+  h4 { font-size: 100%; }
+  p, ol, ul, table { margin-bottom: 0.5em; }
+  ol, ul { padding-left: 20px; }
+}
+
 @media print {
   .no-print { display: none; }
 }
