--- a/app.css
+++ b/app.css
@@ -1,1 +1,1 @@
-.trello-list{margin-bottom:40px;overflow:hidden}.trello-list.break{clear:left}@media print{.no-print{display:none}}
+.trello-list{margin-bottom:40px;overflow:hidden}.trello-list.break{clear:left}.markdown h1{font-size:150%}.markdown h2{font-size:125%}.markdown h3{font-size:110%}.markdown h4{font-size:100%}.markdown ol,.markdown p,.markdown table,.markdown ul{margin-bottom:.5em}.markdown ol,.markdown ul{padding-left:20px}@media print{.no-print{display:none}}
